--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
 	<groupId>fi.dlaitine</groupId>
 	<artifactId>SpringBootRestApp</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
   
+  	<name>SpringBootRestApp</name>
+  	
+  	<properties>
+		<java.version>1.8</java.version>
+	</properties>
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 	    <version>1.5.8.RELEASE</version>
 	</parent>
 
-	<name>SpringBootRestApp</name>
-
-	<properties>
-		<java.version>1.8</java.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>fi.dlaitine.SpringBootRestApp.Application</start-class>
-	</properties>
-	
 	<dependencies>
 		 <dependency>
 			<groupId>org.springframework.boot</groupId>
