--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
 	<groupId>fi.dlaitine</groupId>
-	<artifactId>SpringBootRestApp</artifactId>
+	<artifactId>spring-boot-rest-app</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
   
   	<name>SpringBootRestApp</name>
