--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
 	<version>1.0.0-SNAPSHOT</version>
   
   	<name>springbootrestapp</name>
+
+	<properties>
+		<java.version>11</java.version>
+	</properties>
 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
